fixed alignment

--- a/style.css
+++ b/style.css
@@ -47,8 +47,8 @@ h1 {
 #tixHeader{
     display: flex;
 	flex-direction: row;
-	text-align: center;
-	justify-content: space-evenly;
+	#text-align: center;
+	#justify-content: space-evenly;
 	align-items: center;
     font-size: 0.85em;
     border-bottom: 1px solid #60605f;
@@ -62,22 +62,27 @@ h1 {
 .tix_date {
     width: 10%;
     #font-size: 0.75em;
+    text-align: center;
 }
 .tix_dt {
     width: 15%;
     #font-size: 0.75em;
+    text-align: center;
 }
 .tix_at {
     width: 15%;
     #font-size: 0.75em;
+    text-align: center;
 }
 .tix_df {
     width: 30%;
     #font-size: 0.75em;
+    text-align: center;
 }
 .tix_ato{
     width: 30%;
     #font-size: 0.75em;
+    text-align: center;
 }
 .tix{
     display:flex;
